web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws9-deploy-default
spec:
  replicas: 1
  selector:
    matchLabels:
      color: default
  template:
    metadata:
      labels:
        color: default
    spec:
      containers:
        - name: aws9ctn-blue
          image: 211.183.3.100/nginx/aws9:blue
          volumeMounts:
          - name: default-data
            mountPath: /usr/share/nginx/html
      volumes:
        - name: default-data
          persistentVolumeClaim:
            claimName: default-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: aws9-svc-default
spec:
  ports:
  - name: aws9-port-default
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    color: default
