ingress-rule.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws9-portal
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: / # 이 설정 제거
spec:
  ingressClassName: nginx
  rules:
  - host: www.aws9.pri
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aws9-svc-default
            port:
              number: 80
